address / port arg 로 입력받기

--- a/NetLibExample/DummyServer/DummyServer.vcxproj
+++ b/NetLibExample/DummyServer/DummyServer.vcxproj
@@ -106,7 +106,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>
       </SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;__GATEWAY__;_UNICODE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_UNICODE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>../../NetLib/NetLib/</AdditionalIncludeDirectories>
